SERVER-52764 Invariant that 'getOwnershipFilter' is never called without a valid shardVersion

(cherry picked from commit 8dc84fb6e8f0773eb11b6c34d06ebda07d1eaedb)